--- a/c4r/diagrams/2024-04-dyad.md
+++ b/c4r/diagrams/2024-04-dyad.md
@@ -6,13 +6,13 @@ class Vault {
     getUsdValue()
 }
 class VaultManagerV2 {
-    add()
+    add(id, vault)
     remove()
     deposit()
     withdraw()
     mintDyad()
     burnDyad()
     redeemDyad()
-    liquidate()
+    liquidate(id, to)
 }
     
